generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider              = "prisma-dbml-generator"
  includeRelationFields = "false"
  projectDatabaseType   = "PostgreSQL"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model equipo {
  id                    String                        @id @default(cuid())
  codigo                String                        @unique @db.VarChar(20)
  descripcion           String                        @db.VarChar(60)
  modelo                String                        @db.VarChar(40)
  serie                 String                        @db.VarChar(40)
  marca_id              String
  fecha_creacion        DateTime                      @default(now())
  fecha_actualizacion   DateTime                      @default(now()) @updatedAt
  fecha_inactivacion    DateTime?
  ubicacion_id          String
  cliente_id            String
  documentos            Json                          @default("[]")
  datos_complementarios datos_complementarios_equipo?
  datos_metrologicos    datos_metrologicos_equipos?
  cliente               cliente                       @relation(fields: [cliente_id], references: [id])
  marca                 marca                         @relation(fields: [marca_id], references: [id])
  ubicacion             ubicacion                     @relation(fields: [ubicacion_id], references: [id])
  programacion_equipos  ProgramacionEquipos[]

  @@index([cliente_id])
}

model responsable {
  id                  String      @id @default(cuid())
  identificacion      String      @unique @db.VarChar(10)
  nombre              String      @db.VarChar(40)
  apellido            String      @db.VarChar(40)
  fecha_creacion      DateTime    @default(now())
  fecha_actualizacion DateTime    @updatedAt
  fecha_inactivacion  DateTime?
  cliente_id          String
  cliente             cliente     @relation(fields: [cliente_id], references: [id])
  ubicacion           ubicacion[]

  @@index([cliente_id])
}

model ubicacion {
  id                  String      @id @default(cuid())
  nombre              String      @unique @db.VarChar(40)
  responsable_id      String
  fecha_creacion      DateTime    @default(now())
  fecha_actualizacion DateTime    @updatedAt
  fecha_inactivacion  DateTime?
  cliente_id          String
  equipos             equipo[]
  patron              patron[]
  cliente             cliente     @relation(fields: [cliente_id], references: [id])
  responsable         responsable @relation(fields: [responsable_id], references: [id])

  @@index([cliente_id])
}

model marca {
  id                 String    @id @default(cuid())
  identificacion     String
  descripcion        String
  fechaCreacion      DateTime  @default(now())
  fechaactualizacion DateTime  @updatedAt
  fecha_inactivacion DateTime?
  cliente_id         String
  equipos            equipo[]
  cliente            cliente   @relation(fields: [cliente_id], references: [id])
  patron             patron[]

  @@index([cliente_id])
}

model tipo_actividad {
  id                   String                 @id @default(cuid())
  descripcion          String
  fecha_creacion       DateTime               @default(now())
  fecha_actualizacion  DateTime               @updatedAt
  fecha_inactivacion   DateTime?
  cliente_id           String
  programacion_equipos ProgramacionEquipos[]
  ProgramacionPatrones ProgramacionPatrones[]
  cliente              cliente                @relation(fields: [cliente_id], references: [id])

  @@index([cliente_id])
}

model frecuencia {
  id                    String                 @id @default(cuid())
  descripcion           String
  cantidad_dias         Int
  fecha_creacion        DateTime               @default(now())
  fecha_actualizacion   DateTime               @updatedAt
  fecha_inactivacion    DateTime?
  cliente_id            String
  cliente               cliente                @relation(fields: [cliente_id], references: [id])
  programacion_equipos  ProgramacionEquipos[]
  programacion_patrones ProgramacionPatrones[]

  @@index([cliente_id])
}

model usuario {
  id                    String              @id @default(cuid())
  nombre                String              @db.VarChar(40)
  apellido              String              @db.VarChar(40)
  cargo                 String              @db.VarChar(40)
  correo                String              @unique @db.VarChar(50)
  correoVerificado      Boolean             @default(false) @map("correo_verificado")
  fechaCreacion         DateTime            @default(now()) @map("fecha_creacion")
  fechaActualizacion    DateTime            @updatedAt @map("fecha_actualizacion")
  fechaInactivacion     DateTime?           @map("fecha_inactivacion")
  clienteId             String              @map("cliente_id")
  codigo_identificacion String?             @unique @map("codigo_identificacion") @db.VarChar(25)
  status                UserStatus          @default(PENDING_ACTIVATION) @map("status")
  role                  Role                @default(Consulta)
  EjecucionEquipos      EjecucionEquipos[]
  EjecucionPatrones     EjecucionPatrones[]
  cliente               cliente             @relation(fields: [clienteId], references: [id])

  @@index([clienteId, correo])
}

model magnitud {
  id                  String     @id @default(cuid())
  alias               String     @db.VarChar(10)
  descripcion         String     @db.VarChar(50)
  fecha_creacion      DateTime   @default(now())
  fecha_actualizacion DateTime   @updatedAt
  fecha_inactivacion  DateTime?
  cliente_id          String
  cliente             cliente    @relation(fields: [cliente_id], references: [id])
  variables           variable[]

  @@index([cliente_id])
}

model variable {
  id                  String    @id @default(cuid())
  alias               String
  descripcion         String
  magnitud_id         String
  fecha_creacion      DateTime  @default(now())
  fecha_actualizacion DateTime  @updatedAt
  fecha_inactivacion  DateTime?
  cliente_id          String
  cliente             cliente   @relation(fields: [cliente_id], references: [id])
  magnitud            magnitud  @relation(fields: [magnitud_id], references: [id])

  @@index([cliente_id])
}

model datos_metrologicos_equipos {
  id                  String    @id @default(cuid())
  equipo_id           String    @unique
  emp                 Float
  division_escala     Float
  resolucion          Float
  rango_minimo        Float
  rango_maximo        Float
  fecha_creacion      DateTime  @default(now())
  fecha_actualizacion DateTime  @updatedAt
  fecha_inactivacion  DateTime?
  cliente_id          String
  cliente             cliente   @relation(fields: [cliente_id], references: [id])
  equipo              equipo    @relation(fields: [equipo_id], references: [id])

  @@index([cliente_id])
}

model datos_metrologicos_patrones {
  id                  String    @id @default(cuid())
  emp                 Float
  division_escala     Float
  resolucion          Float
  rango_minimo        Float
  rango_maximo        Float
  valor_nominal       Float
  fecha_creacion      DateTime  @default(now())
  fecha_actualizacion DateTime  @updatedAt
  fecha_inactivacion  DateTime?
  patrones_id         String    @unique
  cliente_id          String
  cliente             cliente   @relation(fields: [cliente_id], references: [id])
  patrones            patron    @relation(fields: [patrones_id], references: [id])

  @@index([cliente_id])
}

model tipo_patron {
  id                  String        @id @default(cuid())
  alias               String
  descripcion         String
  fecha_creacion      DateTime      @default(now())
  fecha_actualizacion DateTime      @updatedAt
  fecha_inactivacion  DateTime?
  patron              patron[]
  patron_lote         patron_lote[]
}

model datos_complementarios_equipo {
  id                                  String    @id @default(cuid())
  descripcion_especificaciones        String?
  cumple_especificacion_instalaciones cumple    @default(NO)
  utiliza_software                    cumple    @default(NO)
  descripcion_software                String?
  version_software                    String?
  fireware                            String?
  observaciones                       String?
  equipo_id                           String    @unique
  fecha_creacion                      DateTime  @default(now())
  fecha_actualizacion                 DateTime  @updatedAt
  fecha_inactivacion                  DateTime?
  cliente_id                          String
  cliente                             cliente   @relation(fields: [cliente_id], references: [id])
  equipo                              equipo    @relation(fields: [equipo_id], references: [id])

  @@index([cliente_id])
}

model datos_complementarios_patrones {
  id                                  String    @id @default(cuid())
  descripcion_especificaciones        String?
  cumple_especificacion_instalaciones cumple    @default(NO)
  utiliza_software                    cumple    @default(NO)
  descripcion_software                String?
  version_software                    String?
  fireware                            String?
  observaciones                       String?
  patron_id                           String    @unique
  fecha_creacion                      DateTime  @default(now())
  fecha_actualizacion                 DateTime  @updatedAt
  fecha_inactivacion                  DateTime?
  cliente_id                          String
  cliente                             cliente   @relation(fields: [cliente_id], references: [id])
  patron                              patron    @relation(fields: [patron_id], references: [id])

  @@index([cliente_id])
}

model ProgramacionEquipos {
  id                 String             @id @default(cuid())
  actividadId        String             @map("actividad_id")
  frecuenciaId       String             @map("frecuencia_id")
  equipoId           String             @map("equipo_id")
  fechaProgramacion  DateTime           @map("fecha_programacion")
  fechaCreacion      DateTime           @default(now()) @map("fecha_creacion")
  fechaActualizacion DateTime           @updatedAt @map("fecha_actualizacion")
  fechaInactivacion  DateTime?          @map("fecha_inactivacion")
  clienteId          String             @map("cliente_id")
  estado             EstadoProgramacion @default(PENDIENTE)
  EjecucionEquipos   EjecucionEquipos?
  actividad          tipo_actividad     @relation(fields: [actividadId], references: [id])
  cliente            cliente            @relation(fields: [clienteId], references: [id])
  equipo             equipo             @relation(fields: [equipoId], references: [id])
  frecuencia         frecuencia         @relation(fields: [frecuenciaId], references: [id])

  @@index([clienteId])
  @@map("programacion_equipos")
}

model ProgramacionPatrones {
  id                 String             @id @default(cuid())
  actividadId        String             @map("actividad_id")
  frecuenciaId       String             @map("frecuencia_id")
  patronId           String             @map("patron_id")
  fechaProgramacion  DateTime           @map("fecha_programacion")
  fechaCreacion      DateTime           @default(now()) @map("fecha_creacion")
  fechaActualizacion DateTime           @updatedAt @map("fecha_actualizacion")
  fechaInactivacion  DateTime?          @map("fecha_inactivacion")
  clienteId          String             @map("cliente_id")
  estado             EstadoProgramacion @default(PENDIENTE)
  EjecucionPatrones  EjecucionPatrones?
  actividad          tipo_actividad     @relation(fields: [actividadId], references: [id])
  cliente            cliente            @relation(fields: [clienteId], references: [id])
  frecuencia         frecuencia         @relation(fields: [frecuenciaId], references: [id])
  patron             patron             @relation(fields: [patronId], references: [id])

  @@index([clienteId])
  @@map("programacion_patrones")
}

model Proveedor {
  id                   String              @id @default(uuid())
  nombre               String
  tipoIdetificacion    TipoIdentificacion  @default(NIT)
  numeroIdentificacion String
  direccion            String
  telefono             String
  email                String
  nombreContacto       String
  telefonoContacto     String
  clienteId            String
  fecha_actualizacion  DateTime
  fecha_creacion       DateTime            @default(now())
  fecha_inactivacion   DateTime?
  EjecucionEquipos     EjecucionEquipos[]
  EjecucionPatrones    EjecucionPatrones[]
  cliente              cliente             @relation(fields: [clienteId], references: [id])

  @@unique([clienteId, numeroIdentificacion])
  @@index([clienteId, numeroIdentificacion])
  @@map("proveedor")
}

model cliente {
  id                             String                           @id @default(uuid())
  nombre                         String                           @unique
  datos_complementarios_equipo   datos_complementarios_equipo[]
  datos_complementarios_patrones datos_complementarios_patrones[]
  datos_metrologicos_equipos     datos_metrologicos_equipos[]
  datos_metrologicos_patrones    datos_metrologicos_patrones[]
  EjecucionEquipos               EjecucionEquipos[]
  EjecucionPatrones              EjecucionPatrones[]
  equipo                         equipo[]
  frecuencia                     frecuencia[]
  magnitud                       magnitud[]
  marca                          marca[]
  PasswordResetToken             PasswordResetToken[]
  patron                         patron[]
  patron_lote                    patron_lote[]
  programacion_equipos           ProgramacionEquipos[]
  programacion_patrones          ProgramacionPatrones[]
  Proveedor                      Proveedor[]
  responsable                    responsable[]
  tipo_actividad                 tipo_actividad[]
  ubicacion                      ubicacion[]
  usuario                        usuario[]
  variable                       variable[]
}

model EjecucionEquipos {
  id                   String              @id @default(uuid())
  fechaEjecucion       DateTime            @map("fecha_ejecucion")
  fechaCreacion        DateTime            @default(now()) @map("fecha_creacion")
  clienteId            String              @map("cliente_id")
  observaciones        String
  programacionEquipoId String              @unique @map("programacion_equipo_id")
  documentos           Json                @default("[]")
  proveedorId          String?             @map("proveedor_id")
  usuarioId            String?             @map("usuario_id")
  tipoEjecutor         tipoEjecutor        @default(INTERNO) @map("tipo_ejecutor")
  cliente              cliente             @relation(fields: [clienteId], references: [id])
  programacionEquipo   ProgramacionEquipos @relation(fields: [programacionEquipoId], references: [id])
  proveedor            Proveedor?          @relation(fields: [proveedorId], references: [id])
  usuario              usuario?            @relation(fields: [usuarioId], references: [id])

  @@index([clienteId, programacionEquipoId])
  @@map("ejecucion_equipos")
}

model EjecucionPatrones {
  id                   String               @id @default(uuid())
  fechaEjecucion       DateTime             @map("fecha_ejecucion")
  fechaCreacion        DateTime             @default(now()) @map("fecha_creacion")
  clienteId            String               @map("cliente_id")
  observaciones        String
  programacionPatronId String               @unique @map("programacion_patron_id")
  documentos           Json                 @default("[]")
  proveedorId          String?              @map("proveedor_id")
  usuarioId            String?              @map("usuario_id")
  tipoEjecutor         tipoEjecutor         @default(INTERNO) @map("tipo_ejecutor")
  cliente              cliente              @relation(fields: [clienteId], references: [id])
  programacionPatron   ProgramacionPatrones @relation(fields: [programacionPatronId], references: [id])
  proveedor            Proveedor?           @relation(fields: [proveedorId], references: [id])
  usuario              usuario?             @relation(fields: [usuarioId], references: [id])

  @@index([clienteId, programacionPatronId])
  @@map("ejecucion_patrones")
}

model PasswordResetToken {
  id        String   @id @default(cuid())
  email     String   @unique
  token     String   @unique
  expires   DateTime @default(now())
  clienteId String   @map("cliente_id")
  cliente   cliente  @relation(fields: [clienteId], references: [id])

  @@index([email, token])
  @@map("password_reset_token")
}

model patron {
  id                    String                          @id
  codigo                String                          @unique @db.VarChar(20)
  descripcion           String                          @db.VarChar(60)
  modelo                String                          @db.VarChar(40)
  serie                 String                          @db.VarChar(40)
  marca_id              String
  fecha_creacion        DateTime                        @default(now())
  fecha_actualizacion   DateTime                        @updatedAt
  fecha_inactivacion    DateTime?
  ubicacion_id          String
  cliente_id            String
  tipo_patron_id        String
  documentos            Json                            @default("[]")
  datos_complementarios datos_complementarios_patrones?
  datos_metrologicos    datos_metrologicos_patrones?
  cliente               cliente                         @relation(fields: [cliente_id], references: [id])
  marca                 marca                           @relation(fields: [marca_id], references: [id])
  tipo_patron           tipo_patron                     @relation(fields: [tipo_patron_id], references: [id])
  ubicacion             ubicacion                       @relation(fields: [ubicacion_id], references: [id])
  patron_lote           patron_lote[]
  programacion_patrones ProgramacionPatrones[]

  @@index([cliente_id])
}

model patron_lote {
  id                  String      @id
  lote                String      @db.VarChar(50)
  fecha_vencimiento   DateTime    @db.Date
  patron_id           String
  tipo_patron_id      String
  fecha_creacion      DateTime    @default(now())
  fecha_actualizacion DateTime
  fecha_inactivacion  DateTime?
  cliente_id          String
  cliente             cliente     @relation(fields: [cliente_id], references: [id])
  patron              patron      @relation(fields: [patron_id], references: [id])
  tipo_patron         tipo_patron @relation(fields: [tipo_patron_id], references: [id])

  @@unique([cliente_id, lote, fecha_vencimiento])
  @@index([cliente_id])
  @@index([tipo_patron_id])
}

enum UserStatus {
  ACTIVE
  PENDING_ACTIVATION
  DISABLED
  DELETED
}

enum TipoIdentificacion {
  NIT
}

enum Role {
  Admin
  Metrologo
  Auxiliar
  Consulta
  Cordinador
}

enum cumple {
  SI
  NO
}

enum EstadoProgramacion {
  PENDIENTE
  COMPLETADO
}

enum tipoEjecutor {
  INTERNO
  EXTERNO
}
