//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table equipo {
  id String [pk]
  codigo String [unique, not null]
  descripcion String [not null]
  modelo String [not null]
  serie String [not null]
  marca_id String [not null]
  fecha_creacion DateTime [default: `now()`, not null]
  fecha_actualizacion DateTime [default: `now()`, not null]
  fecha_inactivacion DateTime
  ubicacion_id String [not null]
  cliente_id String [not null]
  documentos Json [not null, default: '[]']
}

Table responsable {
  id String [pk]
  identificacion String [unique, not null]
  nombre String [not null]
  apellido String [not null]
  fecha_creacion DateTime [default: `now()`, not null]
  fecha_actualizacion DateTime [not null]
  fecha_inactivacion DateTime
  cliente_id String [not null]
}

Table ubicacion {
  id String [pk]
  nombre String [unique, not null]
  responsable_id String [not null]
  fecha_creacion DateTime [default: `now()`, not null]
  fecha_actualizacion DateTime [not null]
  fecha_inactivacion DateTime
  cliente_id String [not null]
}

Table marca {
  id String [pk]
  identificacion String [not null]
  descripcion String [not null]
  fechaCreacion DateTime [default: `now()`, not null]
  fechaactualizacion DateTime [not null]
  fecha_inactivacion DateTime
  cliente_id String [not null]
}

Table tipo_actividad {
  id String [pk]
  descripcion String [not null]
  fecha_creacion DateTime [default: `now()`, not null]
  fecha_actualizacion DateTime [not null]
  fecha_inactivacion DateTime
  cliente_id String [not null]
}

Table frecuencia {
  id String [pk]
  descripcion String [not null]
  cantidad_dias Int [not null]
  fecha_creacion DateTime [default: `now()`, not null]
  fecha_actualizacion DateTime [not null]
  fecha_inactivacion DateTime
  cliente_id String [not null]
}

Table usuario {
  id String [pk]
  nombre String [not null]
  apellido String [not null]
  cargo String [not null]
  correo String [unique, not null]
  correoVerificado Boolean [not null, default: false]
  fechaCreacion DateTime [default: `now()`, not null]
  fechaActualizacion DateTime [not null]
  fechaInactivacion DateTime
  clienteId String [not null]
  codigo_identificacion String [unique]
  status UserStatus [not null, default: 'PENDING_ACTIVATION']
  role Role [not null, default: 'Consulta']
}

Table magnitud {
  id String [pk]
  alias String [not null]
  descripcion String [not null]
  fecha_creacion DateTime [default: `now()`, not null]
  fecha_actualizacion DateTime [not null]
  fecha_inactivacion DateTime
  cliente_id String [not null]
}

Table variable {
  id String [pk]
  alias String [not null]
  descripcion String [not null]
  magnitud_id String [not null]
  fecha_creacion DateTime [default: `now()`, not null]
  fecha_actualizacion DateTime [not null]
  fecha_inactivacion DateTime
  cliente_id String [not null]
}

Table datos_metrologicos_equipos {
  id String [pk]
  equipo_id String [unique, not null]
  emp Float [not null]
  division_escala Float [not null]
  resolucion Float [not null]
  rango_minimo Float [not null]
  rango_maximo Float [not null]
  fecha_creacion DateTime [default: `now()`, not null]
  fecha_actualizacion DateTime [not null]
  fecha_inactivacion DateTime
  cliente_id String [not null]
}

Table datos_metrologicos_patrones {
  id String [pk]
  emp Float [not null]
  division_escala Float [not null]
  resolucion Float [not null]
  rango_minimo Float [not null]
  rango_maximo Float [not null]
  valor_nominal Float [not null]
  fecha_creacion DateTime [default: `now()`, not null]
  fecha_actualizacion DateTime [not null]
  fecha_inactivacion DateTime
  patrones_id String [unique, not null]
  cliente_id String [not null]
}

Table tipo_patron {
  id String [pk]
  alias String [not null]
  descripcion String [not null]
  fecha_creacion DateTime [default: `now()`, not null]
  fecha_actualizacion DateTime [not null]
  fecha_inactivacion DateTime
}

Table datos_complementarios_equipo {
  id String [pk]
  descripcion_especificaciones String
  cumple_especificacion_instalaciones cumple [not null, default: 'NO']
  utiliza_software cumple [not null, default: 'NO']
  descripcion_software String
  version_software String
  fireware String
  observaciones String
  equipo_id String [unique, not null]
  fecha_creacion DateTime [default: `now()`, not null]
  fecha_actualizacion DateTime [not null]
  fecha_inactivacion DateTime
  cliente_id String [not null]
}

Table datos_complementarios_patrones {
  id String [pk]
  descripcion_especificaciones String
  cumple_especificacion_instalaciones cumple [not null, default: 'NO']
  utiliza_software cumple [not null, default: 'NO']
  descripcion_software String
  version_software String
  fireware String
  observaciones String
  patron_id String [unique, not null]
  fecha_creacion DateTime [default: `now()`, not null]
  fecha_actualizacion DateTime [not null]
  fecha_inactivacion DateTime
  cliente_id String [not null]
}

Table programacion_equipos {
  id String [pk]
  actividadId String [not null]
  frecuenciaId String [not null]
  equipoId String [not null]
  fechaProgramacion DateTime [not null]
  fechaCreacion DateTime [default: `now()`, not null]
  fechaActualizacion DateTime [not null]
  fechaInactivacion DateTime
  clienteId String [not null]
  estado EstadoProgramacion [not null, default: 'PENDIENTE']
}

Table programacion_patrones {
  id String [pk]
  actividadId String [not null]
  frecuenciaId String [not null]
  patronId String [not null]
  fechaProgramacion DateTime [not null]
  fechaCreacion DateTime [default: `now()`, not null]
  fechaActualizacion DateTime [not null]
  fechaInactivacion DateTime
  clienteId String [not null]
  estado EstadoProgramacion [not null, default: 'PENDIENTE']
}

Table proveedor {
  id String [pk]
  nombre String [not null]
  tipoIdetificacion TipoIdentificacion [not null, default: 'NIT']
  numeroIdentificacion String [not null]
  direccion String [not null]
  telefono String [not null]
  email String [not null]
  nombreContacto String [not null]
  telefonoContacto String [not null]
  clienteId String [not null]
  fecha_actualizacion DateTime [not null]
  fecha_creacion DateTime [default: `now()`, not null]
  fecha_inactivacion DateTime

  indexes {
    (clienteId, numeroIdentificacion) [unique]
  }
}

Table cliente {
  id String [pk]
  nombre String [unique, not null]
}

Table ejecucion_equipos {
  id String [pk]
  fechaEjecucion DateTime [not null]
  fechaCreacion DateTime [default: `now()`, not null]
  clienteId String [not null]
  observaciones String [not null]
  programacionEquipoId String [unique, not null]
  documentos Json [not null, default: '[]']
  proveedorId String
  usuarioId String
  tipoEjecutor tipoEjecutor [not null, default: 'INTERNO']
}

Table ejecucion_patrones {
  id String [pk]
  fechaEjecucion DateTime [not null]
  fechaCreacion DateTime [default: `now()`, not null]
  clienteId String [not null]
  observaciones String [not null]
  programacionPatronId String [unique, not null]
  documentos Json [not null, default: '[]']
  proveedorId String
  usuarioId String
  tipoEjecutor tipoEjecutor [not null, default: 'INTERNO']
}

Table password_reset_token {
  id String [pk]
  email String [unique, not null]
  token String [unique, not null]
  expires DateTime [default: `now()`, not null]
  clienteId String [not null]
}

Table patron {
  id String [pk]
  codigo String [unique, not null]
  descripcion String [not null]
  modelo String [not null]
  serie String [not null]
  marca_id String [not null]
  fecha_creacion DateTime [default: `now()`, not null]
  fecha_actualizacion DateTime [not null]
  fecha_inactivacion DateTime
  ubicacion_id String [not null]
  cliente_id String [not null]
  tipo_patron_id String [not null]
  documentos Json [not null, default: '[]']
}

Table patron_lote {
  id String [pk]
  lote String [not null]
  fecha_vencimiento DateTime [not null]
  patron_id String [not null]
  tipo_patron_id String [not null]
  fecha_creacion DateTime [default: `now()`, not null]
  fecha_actualizacion DateTime [not null]
  fecha_inactivacion DateTime
  cliente_id String [not null]

  indexes {
    (cliente_id, lote, fecha_vencimiento) [unique]
  }
}

Enum UserStatus {
  ACTIVE
  PENDING_ACTIVATION
  DISABLED
  DELETED
}

Enum TipoIdentificacion {
  NIT
}

Enum Role {
  Admin
  Metrologo
  Auxiliar
  Consulta
  Cordinador
}

Enum cumple {
  SI
  NO
}

Enum EstadoProgramacion {
  PENDIENTE
  COMPLETADO
}

Enum tipoEjecutor {
  INTERNO
  EXTERNO
}

Ref: equipo.cliente_id > cliente.id

Ref: equipo.marca_id > marca.id

Ref: equipo.ubicacion_id > ubicacion.id

Ref: responsable.cliente_id > cliente.id

Ref: ubicacion.cliente_id > cliente.id

Ref: ubicacion.responsable_id > responsable.id

Ref: marca.cliente_id > cliente.id

Ref: tipo_actividad.cliente_id > cliente.id

Ref: frecuencia.cliente_id > cliente.id

Ref: usuario.clienteId > cliente.id

Ref: magnitud.cliente_id > cliente.id

Ref: variable.cliente_id > cliente.id

Ref: variable.magnitud_id > magnitud.id

Ref: datos_metrologicos_equipos.cliente_id > cliente.id

Ref: datos_metrologicos_equipos.equipo_id - equipo.id

Ref: datos_metrologicos_patrones.cliente_id > cliente.id

Ref: datos_metrologicos_patrones.patrones_id - patron.id

Ref: datos_complementarios_equipo.cliente_id > cliente.id

Ref: datos_complementarios_equipo.equipo_id - equipo.id

Ref: datos_complementarios_patrones.cliente_id > cliente.id

Ref: datos_complementarios_patrones.patron_id - patron.id

Ref: programacion_equipos.actividadId > tipo_actividad.id

Ref: programacion_equipos.clienteId > cliente.id

Ref: programacion_equipos.equipoId > equipo.id

Ref: programacion_equipos.frecuenciaId > frecuencia.id

Ref: programacion_patrones.actividadId > tipo_actividad.id

Ref: programacion_patrones.clienteId > cliente.id

Ref: programacion_patrones.frecuenciaId > frecuencia.id

Ref: programacion_patrones.patronId > patron.id

Ref: proveedor.clienteId > cliente.id

Ref: ejecucion_equipos.clienteId > cliente.id

Ref: ejecucion_equipos.programacionEquipoId - programacion_equipos.id

Ref: ejecucion_equipos.proveedorId > proveedor.id

Ref: ejecucion_equipos.usuarioId > usuario.id

Ref: ejecucion_patrones.clienteId > cliente.id

Ref: ejecucion_patrones.programacionPatronId - programacion_patrones.id

Ref: ejecucion_patrones.proveedorId > proveedor.id

Ref: ejecucion_patrones.usuarioId > usuario.id

Ref: password_reset_token.clienteId > cliente.id

Ref: patron.cliente_id > cliente.id

Ref: patron.marca_id > marca.id

Ref: patron.tipo_patron_id > tipo_patron.id

Ref: patron.ubicacion_id > ubicacion.id

Ref: patron_lote.cliente_id > cliente.id

Ref: patron_lote.patron_id > patron.id

Ref: patron_lote.tipo_patron_id > tipo_patron.id